--- a/public/styles/desktop.css
+++ b/public/styles/desktop.css
@@ -1,8 +1,7 @@
-* {
-  box-sizing: border-box;
-}
+@media all and (min-width: 800px) {
 
-#map {
-  height: 75vh;
-  width: 75vw;
+  #map {
+    height: 75vh;
+    width: 75vw;
+  }
 }
