--- a/public/styles/desktop.css
+++ b/public/styles/desktop.css
@@ -3,6 +3,8 @@ nav ul li {
   float: right;
   border: 1px solid black;
   background-color: white;
+  margin-right: .4em;
+  font-size: 1.5em;
 }
 
 .hamburger {
@@ -23,5 +25,7 @@ nav ul li {
   @media only screen and (min-width: 800px) {
     .hamburger {
       display: none;
+        }
+
         }
   };
