--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -19,3 +19,11 @@ section img {
   height: 20vh;
   /*width: 80vw;*/
 }
+button {
+  height: 30px;
+  margin: 20px;
+}
+
+#carIcons {
+  margin-left: 10px
+}
