--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -13,9 +13,7 @@ h1 {
   font-size: 30px;
   margin-bottom: 20px;
 }
-.icon-menu {
+@media only screen and (max-width: 800px) {
+  .icon-menu {
+    display: none;
   }
-section img {
-  height: 20vh;
-  /*width: 80vw;*/
-}
