--- a/public/styles/desktop.css
+++ b/public/styles/desktop.css
@@ -1,30 +1,18 @@
-nav ul li {
-  float: right;
-  border: 1px solid black;
-  background-color: white;
-  margin-right: .4em;
-  font-size: 1.5em;
-}
 
-.hamburger {
-  font-size: 2em;
-  float: right;
-}
-
-@media all and (min-width: 800px) {
-  .icon-menu {
-    display: inline;
-    float: right;
-}
-  }
-  #map {
-    height: 75vh;
-    width: 75vw;
-  }
-  @media only screen and (min-width: 800px) {
+  @media all and (min-width: 800px) {
     .hamburger {
       display: none;
-        }
+    }
 
-        }
-  };
+    .icon-menu {
+      display: inline !important;
+      float: right;
+    }
+    nav ul li {
+      float: right;
+      border: 1px solid black;
+      background-color: white;
+      margin-right: .4em;
+      font-size: 1.5em;
+    }
+  }
