--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -6,12 +6,14 @@
 header {
   background: #211B27;
   color: #2FC2FF;
-  padding: 25px;
+  padding: 25px 25px 60px 25px;
 }
+
 h1 {
   font-style: oblique;
   font-size: 30px;
   margin-bottom: 20px;
+  float: left;
 }
 
 section img {
@@ -24,21 +26,26 @@ button {
 }
 
 nav {
-  padding: 10px;
   display: inline-block;
-  position: relative;
   top: -50px;
   left: 540px;
-  background-color: grey;
-
+  float: right;
 }
+
+.tab a {
+  color: #2FC2FF;
+  text-decoration: none;
+}
+
 .hamburger {
   font-size: 2em;
+  padding-right: 4vw;
 }
 
 #carIcons {
   margin-left: 10px
 }
-.icon-menu {
 
+.icon-menu {
+  display: none;
 }
