--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -48,9 +48,22 @@ table {
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 main {
 	line-height: 1.2;
+}
+
+#mapPageInstructions {
+	padding-bottom: 2vh;
+}
+
+form {
+	padding: 2vh;
+}
+
+.text-area{
+	width: 100%;
+	border: 1px solid black;
 }
