--- a/public/styles/desktop.css
+++ b/public/styles/desktop.css
@@ -1,17 +1,20 @@
 
-  @media all and (min-width: 800px) {
-    .hamburger {
-      display: none;
-    }
-
-    .icon-menu {
-      display: inline !important;
-      float: right;
-    }
-    nav ul li {
-      border: 1px solid black;
-      margin-right: .4em;
-      font-size: 1.5em;
-      display: inline;
-    }
+@media all and (min-width: 800px) {
+  .hamburger {
+    display: none;
   }
+
+  .icon-menu {
+    display: inline !important;
+    float: right;
+  }
+  nav ul li {
+    margin-right: .4em;
+    font-size: 1.5em;
+    display: inline;
+  }
+
+  .tab a {
+    padding: 0 1vw;
+  }
+}
