--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -1,8 +1,3 @@
-#map {
-  height: 75vh;
-  width: 90vw;
-}
-
 h1 {
   font-style: oblique;
   font-size: 30px;
@@ -12,11 +7,6 @@ h1 {
 
 section img {
   height: 20vh;
-}
-
-button {
-  height: 30px;
-  margin: 20px;
 }
 
 nav {
@@ -48,5 +38,19 @@ nav {
 
 .icon-menu {
   display: none;
-  float: right;
+  margin: auto;
+}
+
+.text-area{
+	width: 100%;
+	border: 1px solid black;
+}
+
+#map {
+  height: 75vh;
+  width: 90vw;
+}
+
+#robCar{
+  max-width: 100%;
 }
