i did a css thing

--- a/public/styles/desktop.css
+++ b/public/styles/desktop.css
@@ -23,6 +23,17 @@
   	font-size: 2vw;
   	display: table-cell;
   	vertical-align: middle;
+    cursor: pointer;
+  }
+  #carIcons{
+    text-align: center;
+  }
+  #carIcons li img{
+    opacity: 0.6;
+    cursor: pointer;
+  }
+  #carIcons li img:hover{
+    opacity: 1;
   }
 
 }
