--- a/public/styles/desktop.css
+++ b/public/styles/desktop.css
@@ -5,8 +5,10 @@
   }
 
   .icon-menu {
-    display: inline !important;
+    display: inline;
     float: right;
+    position: relative;
+    top: 2.5vh
   }
   nav ul li {
     margin-right: .4em;
@@ -67,5 +69,28 @@
   #formField {
     height: 8vh;
     width: 26vw;
+  }
+  .cargif {
+  height: 19vh;
+  overflow: hidden;
+  width: 35vw;
+  margin-left: 5vw;
+  display: inline-block;
+  position: relative;
+  top: -68px
+  }
+  #logo {
+    font-style: oblique;
+    font-size: 2em;
+    margin: 1.5vh 0vw;
+    float: left;
+  }
+  header {
+    padding: 25px 25px 0px 25px;
+    height: 14vh;
+  }
+  .tab {
+    display: inline-block;
+    font-size: 2em;
   }
 }
