fixed merge breakage

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -55,10 +55,10 @@ main {
 	line-height: 1.2;
 }
 
-header {
+/*header {
 	background: #211B27;
 	color: #2FC2FF;
-}
+}*/
 
 a {
 	text-decoration: none;
