--- a/public/styles/desktop.css
+++ b/public/styles/desktop.css
@@ -15,6 +15,14 @@
     font-size: 1.5em;
     display: inline;
   }
+  header{
+    height: 8vh;
+  }
+  h2{
+    display: block;
+    font-size: 4em;
+    text-align: center;
+  }
 
   .instructions {
     font-size: 1em;
@@ -35,7 +43,7 @@
   }
 
   .tab a {
-    padding: 0 1vw;
+
   }
   button {
     height: 3vw;
@@ -66,25 +74,41 @@
     width: 50%;
   }
 
-  header{
-    background-image: linear-gradient(blue, green);
-  }
   .cargif {
-  height: 19vh;
-  overflow: hidden;
-  width: 25vw;
-  margin-left: 5vw;
-  display: inline-block;
-  position: relative;
-  top: -68px;
-  /*background-image: linear-gradient(blue, green);*/
-  }
+      height: 8vh;
+      overflow: hidden;
+      margin-left: 20vw;
+      display: inline-block;
+      position: relative;
+      top: -3vh;
+    }
+   .cargif img {
+      width: 75%;
+    }
+    .introInstructions{
+      text-align: center;
+      font-size: 1.5em;
+    }
   #logo {
     font-style: oblique;
-    font-size: 2em;
-    margin: 1.5vh 0vw;
+    font-size: 1em;
+    margin: 0.5vh 0vw;
     float: left;
     color: black;
+  }
+  #navmap {
+    position: absolute;
+    right: -2vh;
+    top: -2vh;
+    color: black;
+    font-size: 1.5em;
+  }
+  #navabout {
+    position: absolute;
+    right: 7vh;
+    top: -2vh;
+    color: black;
+    font-size: 1.5em;
   }
 
   .tab {
@@ -93,6 +117,6 @@
   }
   .tab a {
     color: black;
-
+    padding: 0 1vw;
   }
 }
