more fixing the navbar items

--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -50,8 +50,11 @@ input{
   padding: 0 8vw;
 }
 #navmap {
-  color: black;
-  font-size: 1.5em;
+   position: absolute;
+   right: -2vh;
+   top: 9vh;
+   color: black;
+   font-size: 1.5em;
 }
 
 #navabout {
