--- a/public/styles/desktop.css
+++ b/public/styles/desktop.css
@@ -23,6 +23,7 @@
   }
   header{
     height: 16vh;
+    position: relative;
   }
   h2{
     display: block;
@@ -77,18 +78,18 @@
   }
 
 .cargif {
-  height: 19vh;
   overflow: hidden;
-  margin-left: 17.8vw;
   display: inline-block;
   position: relative;
-  top: -1.5vh;
+  top: -8.5vh;
+  width: 400px;
+  left: 7vw;
 }
 
 .cargif img {
   width: 100%;
   position: relative;
-  top: -10vh;
+  top: -4vh;
 }
 
   .introInstructions{
@@ -137,7 +138,7 @@
   #setAddress {
     width: 7vw;
     position: relative;
-    top: -.5vh;
+    top: -.9vh;
     float: none;
   }
   .mapPreviewBox {
