remove last marker and car icons buttons to right side of page. put car icons into 4 columns

--- a/public/styles/desktop.css
+++ b/public/styles/desktop.css
@@ -21,6 +21,10 @@
     font-size: 1.5em;
     display: inline;
   }
+  ul{
+    column-count: 4;
+    width: 12vw;
+  }
   header{
     height: 16vh;
   }
@@ -56,7 +60,9 @@
     border-radius: 0%;
   }
   #carIcons{
-    text-align: center;
+    position: absolute;
+    top: 50vh;
+    right: 5vw;
   }
   #carIcons li img{
     opacity: 0.6;
@@ -65,10 +71,20 @@
   #carIcons li img:hover{
     opacity: 1;
   }
+  #carSelect{
+    position: absolute;
+    top: 40vh;
+    right: 3vw;
+  }
+  #removeMarker{
+    position: absolute;
+    top: 32vh;
+    right: 3vw;
+  }
 
   #map {
-    width: 75vw;
-    height: 60vw;
+    width: 70vw;
+    height: 55vw;
     float: left;
   }
 
@@ -125,6 +141,7 @@
   }
   #formField {
     font-size: 2em;
+    width: 74.7%;
   }
   .mapPage button, .notesPage button {
     font-size: 1.3em;
